--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@notionhq/client": "^2.2.14",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "notion-client": "^6.16.0",
     "react": "^18",
     "react-dom": "^18"
